Adds takeOff and land functionality as well as conditional random weather. Error messages correct and included. Edge cases: Full/Empty Airport  & Airplane already in flight/grounded working

--- a/specRunner.html
+++ b/specRunner.html
@@ -4,19 +4,20 @@
   <meta charset="utf-8">
   <title>Jasmine Spec Runner v2.4.1</title>
 
-  <link rel="shortcut icon" type="image/png" href="jasmine-lib/jasmine-2.4.1/jasmine_favicon.png">
-  <link rel="stylesheet" href="jasmine-lib/jasmine-2.4.1/jasmine.css">
+  <link rel="shortcut icon" type="image/png" href="/Users/hendrikgeiger/makers/Airport_JavaScript/jasmine-2.6.1/jasmine_favicon.png">
+  <link rel="stylesheet" href="/Users/hendrikgeiger/makers/Airport_JavaScript/jasmine-2.6.1/jasmine.css">
 
-  <script src="jasmine-lib/jasmine-2.4.1/jasmine.js"></script>
-  <script src="jasmine-lib/jasmine-2.4.1/jasmine-html.js"></script>
-  <script src="jasmine-lib/jasmine-2.4.1/boot.js"></script>
+  <script src="/Users/hendrikgeiger/makers/Airport_JavaScript/jasmine-2.6.1/jasmine.js"></script>
+  <script src="/Users/hendrikgeiger/makers/Airport_JavaScript/jasmine-2.6.1/jasmine-html.js"></script>
+  <script src="/Users/hendrikgeiger/makers/Airport_JavaScript/jasmine-2.6.1/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="/Users/hendrikgeiger/makers/Airport_JavaScript/lib/airport.js"></script>
-  <script src="/Users/hendrikgeiger/makers/Airport_JavaScript/lib/plane.js"></script>
-  <script src="/Users/hendrikgeiger/makers/Airport_JavaScript/lib/weather.js"></script>
+  <script src="/Users/hendrikgeiger/makers/Airport_JavaScript/src/airport.js"></script>
+  <script src="/Users/hendrikgeiger/makers/Airport_JavaScript/src/plane.js"></script>
+  <script src="/Users/hendrikgeiger/makers/Airport_JavaScript/src/weather.js"></script>
 
   <!-- include spec files here... -->
+  <script src="/Users/hendrikgeiger/makers/Airport_JavaScript/spec/unit/plane_spec.js"></script>
 </head>
 
 <body>
